Change homepage title and description
Updated title and description for the homepage.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Zhunis Ayanat's homepage
+description: This my homepage, where you can discover all my projects!
